--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test"
+    "test": "react-scripts test",
+    "lint": "eslint \"**/*.tsx\" --fix --ignore-pattern node_modules/"
   },
   "eslintConfig": {
     "extends": [
