--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -40,6 +42,8 @@
     "@types/node": "^12.19.9",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "@types/react-redux": "^7.1.12",
+    "@types/redux": "^3.6.0",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
     "eslint": "^7.15.0",
@@ -48,6 +52,7 @@
     "eslint-plugin-react": "^7.21.5",
     "node-sass": "^4.14.1",
     "prettier": "^2.2.1",
+    "redux-devtools-extension": "^2.13.8",
     "typescript": "^4.1.3"
   }
 }
